# game-unfinished

./: CMakeLists.txt  readme.md
include/: aircraft.hpp  background.hpp  enemy.hpp  enemy_factory.hpp  entity.hpp  game.hpp  health_bar.hpp  hud.hpp  moveable.hpp  particle.hpp  particle_creator.hpp  player.hpp  projectile.hpp  projectile_factory.hpp  random.hpp  resource_manager.hpp  weapon.hpp  weapon_factory.hpp
src/: aircraft.cpp  background.cpp  enemy.cpp  enemy_factory.cpp  entity.cpp  game.cpp  health_bar.cpp  hud.cpp  main.cpp  particle.cpp  particle_creator.cpp  player.cpp  projectile.cpp  projectile_factory.cpp  random.cpp  resource_manager.cpp  weapon.cpp  weapon_factory.cpp
